fixed typo, got rid of mathematical statement since that was unclear

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id="details">
           <h1>Coming Soon(ish)</h1>
-          <p>high-quality probiotics + sustainbly sourced - middlemen</p>
+          <p>high-quality probiotics + sustainably sourced</p>
         </div>    
       </div>
     </header>
